--- a/selectors.yml
+++ b/selectors.yml
@@ -18,3 +18,7 @@ selectors:
     definition:
       method: fqn
       value: user_copy
+  - name: user_copy_snowflake
+    definition:
+      method: fqn
+      value: user_copy_snowflake
