--- a/models/_etleap_sources.yml
+++ b/models/_etleap_sources.yml
@@ -4,6 +4,10 @@ sources:
     database: etleap_dev
     tables:
       - name: my"t`able
+  - name: DBT_DEMO
+    database: etleap_dev
+    tables:
+      - name: PROD_ETLEAP_SCHEMAS____SHEET1
   - name: DBTDEMO
     database: etleap_dev
     tables:
@@ -78,7 +82,6 @@ sources:
       - name: PR_TEST_SCHEMA___INVENTORY
       - name: PR_TEST_SCHEMA___MULTI_COL_PK
       - name: project_info_avro_renamed
-      - name: PUBLIC___CHAR_PK_PADDING_PROD
       - name: restest_DEMO___INVENTORY
       - name: restest_DEMO___PERSON
       - name: SA_TEST_SCHEMA___BIT_PK
